fix: Prevent content overflow issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,9 +22,12 @@ ul {
   padding: 0;
 }
 
-html,
-body {
+html {
   height: 100%;
+}
+body {
+  height: max-content;
+  min-height: 100%;
 }
 
 .visually-hidden {
