--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -66,6 +66,7 @@ button {
 
 input {
   height: 2.5rem;
+  width: 100%;
   min-width: 2.5rem;
   border: 0.125rem solid var(--primary);
   padding: 0 0.5rem;
